Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -139,6 +139,19 @@ Vor Jahren strandete Kora (Sofia Boutella) in einem Raumschiff auf dem Mond Veld
 
 In einer nicht allzu fernen Zukunft dehnt sich die Sonne bedrohlich aus und stellt eine existenzielle Gefahr für die Erde dar. Also beschließt die Vereinte Regierung der Erde, gigantische Raketentriebwerke zu konstruieren, um unseren Planeten von der Sonne wegzubewegen - weit weg von der Reichweite der feurigen Sonneneruptionen. Allerdings stoßen sie auf Widerstand, als Terroristen eine Matrix entwickeln, um das Bewusstsein jedes Menschen zu speichern. Die Reise durch das Universum ist jedoch gefährlich, und die letzte Überlebenschance der Menschheit hängt von einer Gruppe junger Menschen ab, die mutig genug sind, eine gefährliche Operation auf Leben und Tod durchzuführen, um die Erde zu retten.
 
+
+<p>         
+</p>    <a href="https://tv.vitaforas.de/godzilla.mp4">
+<img src="https://tv.vitaforas.de/godzilla.jpg" alt="26" width="100%" height="auto"></a>
+
+Japan, 1945: Kurz nach dem Ende des Zweiten Weltkriegs täuscht der Kamikaze-Pilot Koichi Shishima (Ryunosuke Kamiki) technische Probleme bei seinem Flugzeug vor und landet auf der Insel Odo. Hier begegnet er zum ersten Mal der Riesenechse Godzilla, die die gesamte Insel dem Erdboden gleichmacht. Zwei Jahre später: Shishima ist inzwischen nach Tokio zurückgekehrt, wo er Frau und Kind hat. Zur gleichen Zeit machen Berichte die Runde, dass der durch Atomtests im Bikini-Atoll mutierte Godzilla mehrere US-Kriegsschiffe zerstört hat und sich bereits auf den Weg nach Japan befindet...
+
+<p>         
+</p>    <a href="https://tv.vitaforas.de/queen.mp4">
+<img src="https://tv.vitaforas.de/queen.jpg" alt="26" width="100%" height="auto"></a>
+
+Das Fotografenpaar Anne (Alice Eve) und Patrick Caulder (Joel Fry) setzt eine mysteriöse Verkettung von Ereignissen in Gang, als sie zusammen mit ihrem jungen Sohne Lukas (Lenny Rush) an Board des berühmten und geschichtsträchtigen Passagierschiffes Queen Mary kommen. Diese scheinen irgendwie in Verbindung zur Vergangenheit des Schiffes zu stehen, in der offenbar zahlreiche dunkle Geheimnisse verborgen sind. Plötzlich findet sich die Familie also inmitten schrecklichen Terrors wieder und muss mit der sich Stück für Stück offenbarenden Wahrheit umgehen: Der glamourösen Geschichte des Luxusdampfers liegt jede Menge Gewalt zugrunde...
+
 <p>         
 </p>    <a href="https://tv.vitaforas.de/2.mp4">
 <img src="https://tv.vitaforas.de/2.jpg" alt="26" width="100%" height="auto"></a>
