Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -264,7 +264,12 @@ Ein Tal in der Nordwestschweiz, 1872: Josephine (Clara Gostynski) arbeitet in ei
 Die gehörlose Maya Lopez (Alaqua Cox) ist dafür bekannt, stets tough zu sein zu, doch in ihrem Inneren sieht es ganz anders aus. Noch immer hat sie mit den Nachwirkungen ihres Rachefeldzugs gegen den brutalen Verbrechensbekämpfer Ronin (Jeremy Renner) zu kämpfen, bei welchem sie in New York für gehörig Chaos gesorgt hat. Die seelischen Wunden sitzen tief, denn der emotionale Ballast ihrer Vergangenheit lastet schwer auf ihren Schultern. Als Bandenchefin und Nachfolgerin von Wilson Fisk alias Kingpin muss sie sich für ihre rücksichtslosen Taten verantworten und alles dafür geben, sich den Schatten ihrer Vergangenheit zu stellen. Noch immer ringt sie mit ihrem kulturellen Erbe als amerikanische Ureinwohnerin, obwohl sie mehr denn je darauf angewiesen wäre, ihre inneren Dämonen endlich abzuschütteln. Noch ahnt sie nicht, dass noch viel größere Probleme auf sie zukommen werden …
 
 
+<p>         
+</p>   
+ <a href="https://123.vitaforas.de/liftoff.mp4">
+<img src="https://123.vitaforas.de/liftoff.jpg" alt="26" width="100%" height="auto"></a>
 
+In nicht allzu ferner Zukunft wird der Mars terraformiert und von den besten und klügsten Mitgliedern der Menschheit besiedelt. Dazu gehört auch Calvin (Mason Gooding), der langjährige Freund von Sophie (Lana Condor). Eigentlich sollte Calvin nur kurze Zeit weg sein, doch nun hat sich die Beziehung der beiden zu einer Fernbeziehung entwickelt und Sophie ist sich nicht sicher, ob sie darüber so glücklich ist. Ihr Leid klagt sie auch ihrem Kumpel Walt (Cole Sprouse), der bislang eigentlich ganz zufrieden mit seinem Job als Barista in einer College-Buchhandlung war. Als Sophie kurzerhand beschließt, sich ebenfalls für eine Mission zum Mars zu bewerben, um endlich wieder mit Calvin zusammen zu sein, schleicht sich Walt ebenfalls an Bord...
 <p>         
 </p>   
  <a href="https://123.vitaforas.de/club.mp4">
