Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@ Vor Jahren strandete Kora (Sofia Boutella) in einem Raumschiff auf dem Mond Veld
 <img src="https://123.vitaforas.de/a.jpg" alt="26" width="100%" height="auto"></a>
 
 Aus Erde und Dreck wuchs ein Mädchen. Anders als alle anderen. Ihre Zähne waren weiß wie Schnee. Ihr Name war Hygeia." Diese Geschichte erzählen sich die Waisenkinder, die von dem geheimnisvollen Sektenführer Fust einst auf eine abgelegene griechische Insel gebracht wurden - gerettet vor einer Welt, die im Schmutz versinkt. Auch die 14-jährige Irina und ihr kleiner Bruder Paul leben hier. Zusammen mit den anderen Kindern hausen sie im Dreck des Kellers unter der makellosen Villa ihres "Retters". Hier stellen sie eine spezielle Seife her, die den Sektenmitgliedern als Sakrileg die absolute Reinheit bringen soll. Als Fust auf die schöne Irina aufmerksam wird und sie auserwählt, zu ihm in die Villa zu ziehen, werden die Geschwister das erste Mal in ihrem Leben getrennt. Irina verspricht, zu ihrem kleinen Bruder zu halten - aber die neue Macht, die sie durch Fust erhält, berauscht sie zusehends.
+
 <p>         
 </p>    <a href="https://tv.vitaforas.de/erde2.mp4">
 <img src="https://tv.vitaforas.de/erde2.jpg" alt="26" width="100%" height="auto"></a>
@@ -147,14 +148,14 @@ In einer nicht allzu fernen Zukunft dehnt sich die Sonne bedrohlich aus und stel
 
 
 <p>         
-</p>    <a href="https://tv.vitaforas.de/godzilla.mp4">
-<img src="https://tv.vitaforas.de/godzilla.jpg" alt="26" width="100%" height="auto"></a>
+</p>    <a href="https://123.vitaforas.de/godzilla.mp4">
+<img src="https://123.vitaforas.de/godzilla.jpg" alt="26" width="100%" height="auto"></a>
 
 Japan, 1945: Kurz nach dem Ende des Zweiten Weltkriegs täuscht der Kamikaze-Pilot Koichi Shishima (Ryunosuke Kamiki) technische Probleme bei seinem Flugzeug vor und landet auf der Insel Odo. Hier begegnet er zum ersten Mal der Riesenechse Godzilla, die die gesamte Insel dem Erdboden gleichmacht. Zwei Jahre später: Shishima ist inzwischen nach Tokio zurückgekehrt, wo er Frau und Kind hat. Zur gleichen Zeit machen Berichte die Runde, dass der durch Atomtests im Bikini-Atoll mutierte Godzilla mehrere US-Kriegsschiffe zerstört hat und sich bereits auf den Weg nach Japan befindet...
 
 <p>         
-</p>    <a href="https://tv.vitaforas.de/queen.mp4">
-<img src="https://tv.vitaforas.de/queen.jpg" alt="26" width="100%" height="auto"></a>
+</p>    <a href="https://123.vitaforas.de/queen.mp4">
+<img src="https://123.vitaforas.de/queen.jpg" alt="26" width="100%" height="auto"></a>
 
 Das Fotografenpaar Anne (Alice Eve) und Patrick Caulder (Joel Fry) setzt eine mysteriöse Verkettung von Ereignissen in Gang, als sie zusammen mit ihrem jungen Sohne Lukas (Lenny Rush) an Board des berühmten und geschichtsträchtigen Passagierschiffes Queen Mary kommen. Diese scheinen irgendwie in Verbindung zur Vergangenheit des Schiffes zu stehen, in der offenbar zahlreiche dunkle Geheimnisse verborgen sind. Plötzlich findet sich die Familie also inmitten schrecklichen Terrors wieder und muss mit der sich Stück für Stück offenbarenden Wahrheit umgehen: Der glamourösen Geschichte des Luxusdampfers liegt jede Menge Gewalt zugrunde...
 
