Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -244,6 +244,17 @@ Naomi ist eine erfahrene Weltumseglerin und Tauchlehrerin, die sich auf eine Sol
 
 Das Ende des vertrauten und geliebten Lebens von Cartman wird durch seine unglaublich beunruhigenden Träume vorhergesagt. Während die Ankunft der künstlichen Intelligenz ihre Gesellschaft umkrempelt, kämpfen auch die Erwachsenen in South Park mit ihren eigenen Entscheidungen.
 
+
+
+<p>         
+</p>   
+ <a href="https://123.vitaforas.de/air.mp4">
+<img src="https://123.vitaforas.de/air.jpg" alt="26" width="100%" height="auto"></a>
+
+Im Zweiten Weltkrieg mischt die „100th Bombardment Group“ der 8th Air Force der USA mit ihren 35 Flugzeugen und 350 Männern bei einigen der bedeutsamsten Luftschlachten über Europa mit. Angeführt wird sie von Major Gale „Buck“ Cleven (Austin Butler) und Major John Egan (Callum Turner), zwei furchtlosen jungen Offizieren, die mit Disziplin und Empathie dafür sorgen, dass die ihnen unterstellten Soldaten auch in größter Gefahr und eisigen Höhen zusammenhalten. Im Verlauf der Kampfeinsätze über Deutschland, Belgien und Frankreich erleidet die Gruppe allerdings immer wieder dramatische Verluste und viele Piloten, Schützen und Mechaniker an Bord der Maschinen finden den Tod, weshalb die Bomabardier-Einheit auch den Spitznamen „Die blutige Hundertste“ verpasst bekommt.
+
+Die 9-teilige Mini-Serie basiert auf Donals L. Millers gleichnamigem Roman. Wie zuvor schon bei „Band of Brothers“ und „The Pacific“ waren Steven Spielberg und Tom Hanks als Produzenten an der Entwicklung beteiligt.
+
 <p>         
 </p>   
  <a href="https://123.vitaforas.de/tron.mp4">
