Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -245,6 +245,12 @@ Naomi ist eine erfahrene Weltumseglerin und Tauchlehrerin, die sich auf eine Sol
 Das Ende des vertrauten und geliebten Lebens von Cartman wird durch seine unglaublich beunruhigenden Träume vorhergesagt. Während die Ankunft der künstlichen Intelligenz ihre Gesellschaft umkrempelt, kämpfen auch die Erwachsenen in South Park mit ihren eigenen Entscheidungen.
 
 
+<p>         
+</p>   
+ <a href="https://123.vitaforas.de/free.mp4">
+<img src="https://123.vitaforas.de/free.jpg" alt="26" width="100%" height="auto"></a>
+
+Um für seine Familie da zu sein, hat Mason Pettis (John Cena) seine Karriere bei den Rangers der US-Army auf Eis gelegt. Jetzt verdient er sich seine Brötchen als Anwalt – aber das auch nur mehr schlecht als recht. Auch seine Ehe hat schon einmal bessere Tage gesehen. Doch dann wird er in Versuchung geführt: Ein alter Kamerad hat einen interessanten Job im Angebot. Er schlägt ein und arbeitet fortan als Sicherheitskraft für die Investigativjournalistin Claire Wellington (Alison Brie). Diese Maßnahme scheint notwendig geworden zu sein, nachdem sie den südamerikanischen Despoten Venegas (Juan Pablo Raba) im Interview gegrillt hat. Doch Petit ist kaum aus dem Flugzeug gestiegen, da inszeniert das Militär einen brutalen Coup. Plötzlich geht es also um Leben und Tod und für Petit, Wellington und Venegas bleibt wohl nur die Flucht in den Dschungel. Die drei müssen gegen Natur, Armee und sich selbst kämpfen, um in dieser lebensfeindlichen Umgebung zu überleben.
 
 <p>         
 </p>   
