Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -348,6 +348,15 @@ Wilde Partys, heiße Flirts und jede Menge Hangovers: Acht Reality-Sternchen erl
 <img src="https://123.vitaforas.de/watney.jpg" alt="26" width="100%" height="auto"></a>
 
 Die NASA treibt mit der „Ares 3“-Mission die Erforschung des Mars voran. Die Astronauten Mark Watney, Commander Lewis, Rick Martinez, Chris Beck, Alex Vogel und Beth Johanssen sind auf dem roten Planeten gelandet, inklusive eines Fahrzeugs und eines Habitats, in dem die Forscher leben und Nahrung herstellen können. Doch ein Sandsturm droht die mitgebrachte Technik samt ihrer Einwohner hinwegzufegen, so dass Commander Lewis den Befehl zum sofortigen Aufbruch gibt. Weil ihn seine Crew für tot hält, bleibt der Botaniker Mark Watney auf dem unwirtlichen fremden Planeten zurück. Mit beschädigter Ausrüstung versucht er, die wenigen ihm zur Verfügung stehenden Mittel so einfallsreich wie möglich zu nutzen. Und tatsächlich gelingt es Watney, der Erde zu signalisieren, dass er noch lebt. Die NASA unter Direktor Sanders beginnt, die Rettung des „Marsianers“ zu planen. Parallel dazu startet Watneys Crew eine eigene, riskante Mission, ihn heimzuholen …
+
+
+
+<p>         
+</p>         
+ <a href="https://123.vitaforas.de/the.mp4">
+<img src="https://123.vitaforas.de/the.jpg" alt="26" width="100%" height="auto"></a>
+
+Im Norden Afghanistans, nahe der Stadt Kamdesh, liegt das Camp Keating. Der Außenposten des US-Militärs hat die Aufgabe, der Region dauerhaft Frieden zu bringen und die Bevölkerung in Wiederaufbauprojekte einzubeziehen. Das Lager befindet sich dabei an einem strategisch schlechten Ort: Am Fuße von drei Bergen und nur 14 Meilen von der pakistanischen Grenze entfernt, müssen die Amerikaner stets mit einem Überfall durch die Taliban rechnen. Die vier amerikanischen Soldaten Clint Romesha, Justin Gallegos, Michael Scusa und Josh Kirk werden zur Verstärkung ins Camp gebracht, um kurz darauf die mittlerweile alltäglich gewordenen Provokationen der Terroristen zu erleben. Zum Glück macht bald die Nachricht die Runde, dass die Army den Außenposten aufgeben will. Für die verbliebenen Soldaten heißt es nun vor allem: durchhalten! Doch sie haben nicht mit den Taliban gerechnet, die von den Plänen gehört haben und vor dem Abzug der Amerikaner noch eine Offensive planen ...
 <p>         
 </p>         
  <a href="https://123.vitaforas.de/leon.mp4">
