Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ In einer nicht allzu fernen Zukunft dehnt sich die Sonne bedrohlich aus und stel
 
 
 <p>         
-</p>    <a href="https://123.vitaforas.de/godzilla.mp4">
+</p>    <a href="https://123.vitaforas.de/Godzilla.mp4">
 <img src="https://123.vitaforas.de/godzilla.jpg" alt="26" width="100%" height="auto"></a>
 
 Japan, 1945: Kurz nach dem Ende des Zweiten Weltkriegs täuscht der Kamikaze-Pilot Koichi Shishima (Ryunosuke Kamiki) technische Probleme bei seinem Flugzeug vor und landet auf der Insel Odo. Hier begegnet er zum ersten Mal der Riesenechse Godzilla, die die gesamte Insel dem Erdboden gleichmacht. Zwei Jahre später: Shishima ist inzwischen nach Tokio zurückgekehrt, wo er Frau und Kind hat. Zur gleichen Zeit machen Berichte die Runde, dass der durch Atomtests im Bikini-Atoll mutierte Godzilla mehrere US-Kriegsschiffe zerstört hat und sich bereits auf den Weg nach Japan befindet...
@@ -255,6 +255,12 @@ Um für seine Familie da zu sein, hat Mason Pettis (John Cena) seine Karriere be
 <p>         
 </p>   
  <a href="https://123.vitaforas.de/air.mp4">
+<img src="https://123.vitaforas.de/air.jpg" alt="26" width="100%" height="auto"></a>
+
+
+<p>         
+</p>   
+ <a href="https://123.vitaforas.de/air2.mp4">
 <img src="https://123.vitaforas.de/air.jpg" alt="26" width="100%" height="auto"></a>
 
 Im Zweiten Weltkrieg mischt die „100th Bombardment Group“ der 8th Air Force der USA mit ihren 35 Flugzeugen und 350 Männern bei einigen der bedeutsamsten Luftschlachten über Europa mit. Angeführt wird sie von Major Gale „Buck“ Cleven (Austin Butler) und Major John Egan (Callum Turner), zwei furchtlosen jungen Offizieren, die mit Disziplin und Empathie dafür sorgen, dass die ihnen unterstellten Soldaten auch in größter Gefahr und eisigen Höhen zusammenhalten. Im Verlauf der Kampfeinsätze über Deutschland, Belgien und Frankreich erleidet die Gruppe allerdings immer wieder dramatische Verluste und viele Piloten, Schützen und Mechaniker an Bord der Maschinen finden den Tod, weshalb die Bomabardier-Einheit auch den Spitznamen „Die blutige Hundertste“ verpasst bekommt.
