Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -389,6 +389,12 @@ Max Klein spendet bei einem Flugzeugabsturz Trost und führt die Überlebenden a
 <p>         
 </p> 
 
+
+     <a href="https://123.vitaforas.de/nope.mp4">
+<img src="https://123.vitaforas.de/nope.jpg" alt="26" width="100%" height="auto"></a>
+
+Außerhalb von Los Angeles, im trockenen und weitläufigen Santa Clarita Valley, leben die Geschwister OJ (Daniel Kaluuya) und Emerald Haywood (Keke Palmer). Sie betreiben eine Pferderanch, die sie von ihrem Vater, dem legendären Pferdetrainer Otis Haywood Sr. (Keith David) geerbt haben, der bei einem unerklärlichen "Metallregen" ums Leben kam. Die Arbeit auf der Ranch stellt sich für die Geschwister als hartes Geschäft heraus und trotz ihres Könnens stehen sie schon bald vor finanziellen Problemen. Die Lage ist ernst und die Geschwister denken darüber nach, die Ranch und damit auch das Erbe ihres Vaters an den nahe gelegenen Vergnügungspark Jupiter's Claim zu verkaufen. Dieser Freizeitpark und Streichelzoo, der täglich schaulustige Besucher in die Gegend lockt und auf der Geschichte und Ästhetik des kalifornischen Goldrausches basiert, liegt gleich neben dem Haywood-Anwesen. Der ehemalige Hollywood-Kinderstar Ricky "Jupe" Park (Steven Yeun) betreibt das Gelände und versucht ganz nebenbei, seiner traumatischen Vergangenheit zu entkommen. OJ und Emerald beginnen auf ihrer riesigen Ranch unerklärliche Phänomene zu beobachten – unheimliche Geräusche, plötzliche Stromausfälle und mysteriöse Wetterphänomene. Als OJ eine fliegende Untertasse über der Farm ausmacht, wollen sie die Ereignisse mit der Kamera festhalten. Die Lage eskaliert, als die Geschwister die fachkundige Hilfe von Angel Torres (Brandon Perea), einem Angestellten des Elektronikgeschäfts Fry's, und dem Regisseur Antlers Holst (Michael Wincott) in Anspruch nehmen. Von nun an überschreiten OJ und Emerald einen Punkt, an dem es kein Zurück mehr gibt ...
+
      <a href="https://zero.vitaforas.de/suzume.mp4">
 <img src="https://zero.vitaforas.de/suzume.jpg" alt="26" width="100%" height="auto"></a>
 
