Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -196,6 +196,14 @@ Drei Astronauten starten zur 42. Mission auf den Mars, in zwei Jahren sollen sie
 Ein internationaler Flottenverband aus fünf Kriegsschiffen führt gerade eine Übung im pazifischen Ozean durch. Admiral Shane erblickt während eines Manövers ein metallenes Gebilde, das sich bei näherer Betrachtung als außerirdisches Raumschiff entpuppt, das aus dem Wasser ragt. Die Militärs reagieren mit großer Neugier auf das unbekannte Objekt. Als sich die ersten Offiziere dem gewaltigen Raumschiff nähern, erwecken sie es zum Leben. Admiral Shane und sein Schwiegersohn in spe, Alex Hopper, gehen auf Angriffskurs und stellen sich den ungebetenen Gästen in die Quere. Doch die entfesselte Seeschlacht ist nur der Anfang. Denn die Aliens, "Regents" genannt, wollen eine gewaltige Energiequelle auf dem Meer errichten - und die Menschheit scheint ihnen dabei im Weg zu stehen...
 
 
+<p>         
+</p>   
+ <a href="https://123.vitaforas.de/code8.mp4">
+<img src="https://123.vitaforas.de/code8.jpg" alt="26" width="100%" height="auto"></a>
+
+Code 8 (2019 ‧ Action/Sci-Fi)
+
+Menschen mit besonderen Fähigkeiten leben oft in Armut. Conner Reed, ein Bauarbeiter mit Superkräften, kann die Behandlungskosten für seine kranke Mutter nicht bezahlen. Deshalb schließt er sich einer kriminellen Bande an. 
 
 <p>         
 </p>   
