Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -126,6 +126,15 @@ Basierend auf wahren Begebenheiten:
 <img src="https://123.vitaforas.de/stalker.jpg" alt="26" width="100%" height="auto"></a>
 
 Nach einem langen, anstrengenden Drehtag bei der Produktion ihres neuesten Horrorfilms kehrt die junge Schauspielerin Rose Hepburn (Sophie Skelton) in ihr heute Nacht wie leergefegtes Hotel zurück. Weil der reguläre Lift defekt ist, ist sie gezwungen, den alten Lastenaufzug zu benutzen, der dann auch prompt vor dem zwölften Stockwerk steckenbleibt. Mit Rose in der Falle sitzt ein sich etwas seltsam nervös verhaltender Fremder (Stuart Brennan). Niemand hört ihre Hilfeschreie und der Notrufknopf scheint ebenfalls nicht zu funktionieren. Handyempfang haben die zwei ebenfalls nicht und so steigt die Anspannung. Bald muss Rose herausfinden, dass es sich bei dem mit ihr eingeschlossenen Mann um einen Mitarbeiter des für ihren aktuellen Film verantwortlichen Studios handelt und dass er obendrein von ihr besessen scheint. Natürlich schwant ihr Böses und sie befürchtet, dass er diese Situation bewusst herbeigeführt haben könnte. Doch während der Aufzug in bedrohlicher Höhe hängt und jeden Moment in die Tiefe zu stürzen droht, kommen bald noch ganz andere Wahrheiten ans Licht …
+
+
+<p>         
+</p>   
+  <a href="https://123.vitaforas.de/jupiter.mp4">
+<img src="https://123.vitaforas.de/jupiter.jpg" alt="26" width="100%" height="auto"></a>
+
+Jupiter Jones wurde unter dem Nachthimmel geboren. Bereits bei ihrer Geburt gab es erste Anzeichen, dass Jupiter etwas ganz Besonderes ist, berufen zu außergewöhnlichen Dingen. Als junge Erwachsene träumt sie von den Sternen, muss sich aber mit der harten und kalten Realität anfreunden. Sie hat bereits einige Trennungen hinter sich und lebt momentan mehr schlecht als recht von ihrem Job als Putzfrau. Doch dann kommt Caine auf der Erde an, ein genetisch veränderter Ex-Söldner. Er verschafft der jungen Frau einen ersten Eindruck davon, was das Schicksal für sie bereithält. Denn Jupiter gehört zu einer Blutlinie, die dazu in der Lage ist, das Gleichgewicht des gesamten Kosmos zu beeinflussen. Ihre Abstammung birgt große Gefahr: Der sinistere Balem will Jupiter tot sehen …
+
 <p>         
 </p>   
   <a href="https://tv.vitaforas.de/moon.mp4">
