Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -256,6 +256,13 @@ Naomi ist eine erfahrene Weltumseglerin und Tauchlehrerin, die sich auf eine Sol
 
 <p>         
 </p>   
+ <a href="https://123.vitaforas.de/tdt2.mp4">
+<img src="https://123.vitaforas.de/tdt2.jpg" alt="26" width="100%" height="auto"></a>
+
+Ash (Bruce Campbell) und Linda (Denise Bixler) ziehen sich für ein paar schöne Tage in eine abgelegene Hütte im Wald zurück. Dort finden sie ein seltsam aussehendes Buch (Necronomicon ex mortis) und ein Tonbandgerät. Durch die abgespielten Formeln auf dem Tonband erwachen Dämonen zum Leben und nehmen von Linda Besitz. Nun ist Ashs Leben in Gefahr, denn seine besessene Liebste hat es von nun an auf ihn abgesehen. Ash schafft es aber, sie zu überwältigen und zu begraben. Doch damit ist der Spuk noch lange nicht vorbei. Die Dämonen des Waldes halten für den gebeutelten Helden noch etliche Überraschungen bereit...
+
+<p>         
+</p>   
  <a href="https://123.vitaforas.de/pandaverse.mp4">
 <img src="https://123.vitaforas.de/panderverse.jpg" alt="26" width="100%" height="auto"></a>
 
