Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -1684,30 +1684,25 @@ Die unendliche Geschichte:
      <li> 
 <a href="https://123.vitaforas.de/endless1.mp4">
 <img src="https://123.vitaforas.de/endless1.jpg" alt="9910" width="31%" height="auto"></a>
-1
 
 <a href="https://123.vitaforas.de/endless2.mp4">
 <img src="https://123.vitaforas.de/endless2.jpg" alt="7" width="31%" height="auto"></a>
-2
 
 <a href="https://123.vitaforas.de/endless3.mp4"> 
 <img src="https://123.vitaforas.de/endless3.jpg" alt="7" width="31%" height="auto"></a>
-3
+
 </li>
      </ul>
 
-
-
-
-
-
+1 Der zehnjährige Bastian, ein Träumer und Bücherwurm, wird in der Schule immer wieder von seinen Mitschülern gequält. Als er eines Tages auf der Flucht in einem Antiquariat ein Buch namens „Die unendliche Geschichte“ sieht, stiehlt er es, versteckt sich auf dem Dachboden seiner Schule und beginnt zu lesen: Das Land Phantasien wird von einem alles verschlingenden Nichts bedroht. Die Herrscherin von Phantasien, die kindliche Kaiserin, wählt den jungen Atreju aus, um nach einer Rettung zu suchen. Sein Weg führt ihn durch das Land der menschlichen Phantasie, doch er scheint seinem Ziel kaum näher zu kommen. Doch während er noch liest, fühlt Bastian plötzlich eine Verbindung zu Atreju und die Erkenntnis naht, dass er die Rettung des Landes sein könnte.
 
  <p>         
 </p>
-
+2 Kein Buch bleibt sich gleich, wenn man es zum zweiten Mal liest. Bastian, ein Junge mit zuwenig Selbstvertrauen, muss das selbst erfahren, als er sich wieder auf das Leseabenteuer mit "Die unendliche Geschichte" einlässt. Bastian taucht ein in das Buch und wird diesmal selbst von ihm nach Phantàsien getragen, dem Ort aller Geschichten und Träume, die die Menschen zum Leben so nötig haben. Doch das Reich der Phantasie, in dem die kindliche Kaiserin herrscht, wird von der Herren über die große Leere, der verführerischen Xayide, tödlich bedroht. Bastian das Menschenkind, und sein treuer Freund Atreju aus Phantàsien müssen viele gefährliche Abenteuer durchleben, bevor sie in letzter Sekunde Phantasien, und damit auch den Weitergang der "unendlichen Geschichte", retten können.
 
  <p>         
 </p>
+3 An Bastians neuer Schule regiert die Jugendbande „Nasties", die ihn gleich am ersten Schultag als neues Opfer ausgewählt hat. Als ihn die Bande eines Tages verfolgt, flüchtet Bastian in die Schulbibliothek. Dort trifft er nicht nur erneut auf den Bibliothekar Herrn Kureander, sondern findet auch das Buch „Die unendliche Geschichte" wieder. Um den „Nasties" zu entkommen, wünscht er sich ins Reich Phantasien. Da er jedoch das Buch zurücklässt, fällt dieses in die Hände der "Nasties" und Phantäsiens Zukunft gerät in größte Gefahr. Das Schicksal des Märchenreichs scheint besiegelt, doch Bastian will nicht aufgeben: Gemeinsam mit seinem Freund Fuchur, dem Gnom-Ehepaar Engywuck und Urgl, Borkentroll und Felsenheißer Junior macht er sich auf den Weg, um das Buch „Die unendliche Geschichte" aus dem Besitz der fiesen Jugendbande zu retten.
 
 <p>
 </p>
