Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -1469,6 +1469,12 @@ USA, 2025: Jeder kann sein Leben durch künstliche Organe verlängern. Der einzi
 Seit der Entführung seiner Tochter ist die Arbeit Danny Rourkes (Ben Affleck) einzige stabile Säule im Leben. Den Rest haben Schuld, Verzweiflung und Trauer gnadenlos aufgefressen. Als Polizist zu helfen, das geht noch. Als er knietief in seinem jüngstem Fall steckt, kann er die Vergangenheit jedoch nicht davon abhalten, sich in seinen Job einzumischen. Denn bei den Ermittlungen zu einer Serie von Bankrauben stößt er unerwartet auf einen Hinweis zum Verbleib seiner Tochter. Die Spur führt ihn und Diana Cruz (Alice Braga) direkt zu Gangster Dellrayne (William Fichtner). Als sich herausstellt, dass der mehr als nur Banksafes knacken kann, scheint die vermeintliche Realität Risse zu bröckeln. Rourke scheint niemandem mehr trauen zu können und es wird zunehmend schwerer, einen klaren Kopf zu bewahren, um seine Tochter endlich aus den Fängen des Verbrechens befreien und wieder nach Hause holen zu können.
  
 
+ <p>         
+</p>
+<a href="https://123.vitaforas.de/barn.mp4">
+<img src="https://123.vitaforas.de/barn.jpg" alt="25" width="100%" height="auto"></a>
+
+Bill (Martin Starr) erbt das ländliche Anwesen seines Onkels in Norwegen, nachdem dieser bei einem verrückten Unfall ums Leben gekommen ist. So wurde es Bill, seiner Frau (Amrita Acharia) und den Kindern Nora (Zoe Winther-Hansen) und Lucas (Townes Bunner) jedenfalls mitgeteilt. Happy über die unerwartete Gelegenheit zieht die Familie von Kalifornien nach Norwegen um. Plant Bill doch aus dem Haus eine Frühstückspension zu machen. Kaum in der neuen Heimat angekommen, ergeben sich allerdings reichlich Komplikationen. Das liegt zum einen daran, dass die Amerikaner sich erst noch an die vielen kulturellen und gesellschaftlichen Unterschiede gewöhnen müssen. Zum anderen aber vor allem an dem, was Lucas in der Scheune entdeckt: einen Elf (Kiran Shah). Bills Onkel ließ den kleinen Kerl dort leben und im Gegenzug half dieser ihm auf dem Bauernhof aus. Allerdings hasst der Elf helle Lichter, laute Geräusche und ganz besonders jede Art von Veränderung in seiner Umgebung. Wird er mit diesen Dingen konfrontiert, reagiert er ausgesprochen gewalttätig …
 
  <p>         
 </p>
