Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -1390,11 +1390,20 @@ Für Chloe (im Original gesprochen von Becky G.) und ihre Mutter beginnt ein neu
 
 
 ☁️ Hosted © by vitaforas 🛡️
+
+
 </p>
         <p>
+<a href="http://123.vitaforas.de/gold.mp4">
+<img src="http://123.vitaforas.de/gold.jpg" alt="4" width="100%" height="auto"></a>
+The Goldsmith (2022 ‧ Horror/Suspense)
 
+Drei Kriminelle, die seit ihrer Kindheit befreundet sind, glauben, das perfekte Ziel für ihren nächsten Raub gefunden zu haben: ein abgelegenes Bauernhaus, in dem ein älterer Goldschmied und seine Frau leben. Doch nachdem sie das Paar gefesselt und sich Zutritt zur Werkstatt verschafft haben, schließt sich die Tür des Kellerraums plötzlich und sie sind eingeschlossen. Das Paar spielt die Eindringlinge gegeneinander aus und zwingt sie, ihre dunkelsten Geheimnisse preiszugeben.  
+</p>
+        <p>
 <a href="http://tv.vitaforas.de/stumm.mp4">
 <img src="http://tv.vitaforas.de/stumm.jpg" alt="4" width="100%" height="auto"></a>
+
 Brian Godlock (Joel Kinnaman) muss mit ansehen, wie sein kleiner Sohn an Heiligabend in das Kreuzfeuer einer Gang gerät und stirbt. Dabei wird er selbst schwer verletzt und seiner Stimme beraubt. Rache wird nun zu seiner einzigen Mission und er beginnt dafür ein hartes Training. Godlock ist bereit, alles zu riskieren, um den Tod seines Sohnes zu vergelten
 
  <p>         
