Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ Nach einem langen, anstrengenden Drehtag bei der Produktion ihres neuesten Horro
 <p>         
 </p>   
   <a href="https://123.vitaforas.de/jupiter.mp4">
-<img src="https://123.vitaforas.de/jupiter.jpg" alt="26" width="100%" height="auto"></a>
+<img src="https://123.vitaforas.de/jupit.jpg" alt="26" width="100%" height="auto"></a>
 
 Jupiter Jones wurde unter dem Nachthimmel geboren. Bereits bei ihrer Geburt gab es erste Anzeichen, dass Jupiter etwas ganz Besonderes ist, berufen zu außergewöhnlichen Dingen. Als junge Erwachsene träumt sie von den Sternen, muss sich aber mit der harten und kalten Realität anfreunden. Sie hat bereits einige Trennungen hinter sich und lebt momentan mehr schlecht als recht von ihrem Job als Putzfrau. Doch dann kommt Caine auf der Erde an, ein genetisch veränderter Ex-Söldner. Er verschafft der jungen Frau einen ersten Eindruck davon, was das Schicksal für sie bereithält. Denn Jupiter gehört zu einer Blutlinie, die dazu in der Lage ist, das Gleichgewicht des gesamten Kosmos zu beeinflussen. Ihre Abstammung birgt große Gefahr: Der sinistere Balem will Jupiter tot sehen …
 
